syntax = "proto3";


package cpPackage;

service cpService {
    rpc Home(homeReq) returns(homeRes);
    rpc searchByPin(searchByPinReq) returns(searchByPinRes);
    rpc searchById (searchByIdReq) returns(searchByPinRes);
    rpc validateAwb (validateAwbReq) returns(validateAwbRes);
}



message homeReq {
    string id = 1;
}

message homeRes {
    string id=1;
    string name=2;
    int64 phone=3;
    string email=4;
    Address address=5;
    int32 status=6;
    string consignmentPrefix=8;
}
message Address {
    int32 pincode=1;
    string address=2;
}



message searchByPinReq {
    int32 pincode=1;
}

message searchByPinRes {
    string id=1;
    string name=2;
    int64 phone=3;
    string email=4;
    Address address=5;
    int32 status=6;
    string message =7;
}



message searchByIdReq {
    string id=1;
}


message validateAwbReq {
    string awb = 1;
    string cpId = 2;
}

message validateAwbRes {
    string message = 1;
    int32 status = 2;
}
